src/components/Card1/Card1.css
.Right-Card {
  display: flex;
  justify-content: space-between;
  margin-top: 18%;
}
.Right-Card .product-img {
  padding: 10px 0 10px 18px;
  margin-top: 42px;
  position: relative;
  display: flex;
}
.Right-Card .product-img .button-card {
  display: flex;
  align-self: flex-end;

  width: 184px;
  height: 47px;
}
.Right-Card .product-img .button-card button {
  background: #7b3c93;
  color: azure;
}
.Right-Card .product-img img {
  width: 90%;
}

.Right-Card .product-info {
  position: relative;
  padding-right: 13px;
}
.Right-Card .product-info .bingo-box img {
  position: absolute;
  top: 5%;
  left: -70%;
  width: 170%;
  z-index: -1;
}
.Right-Card .product-info .bingo-box2 img {
  position: absolute;
  top: 15%;
  left: -70%;
  width: 170%;
  z-index: 1;
}
.Right-Card .product-info-content {
  margin-top: 57px;
}
.Right-Card .product-info-content h3 {
  font-size: 1.4rem;
  font-weight: 600;
  margin-bottom: 10px;
}
.Right-Card .product-info-content h3 span {
  color: #7b3c93;
}
.Right-Card .product-info-content p {
  margin-top: 30px;
  /* font-family: "Urbanist"; */
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 32px;
  letter-spacing: 0.2px;
  color: #000000;
  padding: 20px 20px 20px 0px;
}

